[package]

name = "remy"
description = "quickly port Rust applications to different platforms"
version = "0.0.4"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://github.com/mcandre/remy"
documentation = "https://docs.rs/releases/search?query=remy"

[dependencies]
regex = "^1.1"
lazy_static = "^1.1"
getopts = "^0.2.18"
tinyrick = { version = "^0.0.9", optional = true }
tinyrick_extras = { version = "^0.0.3", optional = true }
zip = { version = "^0.4", optional = true }
glob = { version = "^0.2", optional = true }

[features]
letmeout = ["tinyrick", "tinyrick_extras", "zip", "glob"]

[[bin]]
name = "remy"
path = "src/remy.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
