[package]

name = "hello"
version = "0.0.1"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]

[[bin]]
name = "hello"
path = "hello.rs"

[dependencies]
argdata = { version = "^0.1", optional = true }
cloudabi = { version = "^0.0.3", optional = true }

[features]
cloudlibc = ["argdata", "cloudabi"]
